# f1-ai-assistant

./: .env.example  .gitignore  Dockerfile  Makefile  PROJECT.md  README.md  pyproject.toml  to_do.md
.github/workflows/: ci.yml  test.yml
config/: settings.yaml
data/: README.md
deployment/docker/: docker-compose.yml
docs/: README.md
docs/architecture/: data-layer.md  data-sources.md  project-structure.md  race-data-guide.md
docs/changelog/: 001-data-loader.md  002-csv-export.md  003-telemetry-and-lap-filters.md
docs/guides/: cli-reference.md  dashboard-visualizations.md  getting-started.md  improvements-ui.md  replay-fluid-animation.md  replay-troubleshooting-and-fixes.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: ChatInterface.tsx  LapControls.tsx  PositionChart.tsx  RaceSelector.tsx  StandingsTable.tsx  TrackStatusBadge.tsx  WeatherInfo.tsx
frontend/components/dashboard/: EngineerTab.tsx  OverviewTab.tsx  PaceTab.tsx  ReplayTab.tsx  StandingsStrategyTab.tsx  StandingsTab.tsx  StrategyTab.tsx  TelemetryTab.tsx
frontend/lib/: api.ts  dashboard-api.ts  types.ts  tyre-colors.ts
scripts/: test_race_load.py
src/: agent.py  data_loader.py  race_state.py  tools.py
src/api/: main.py  services.py
src/api/routes/: chat.py  dashboard.py  race.py
src/dashboard/: app.py  replay_engine.py  state.py
src/dashboard/pages/: overview.py  pace.py  replay.py  standings.py  strategy.py  telemetry.py  track_map.py
src/utils/: config.py  logger.py
tests/: conftest.py
tests/unit/: test_tools.py
