[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-race-engineer"
version = "0.1.0"
description = "AI-powered F1 race engineer with real historical data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # F1 Data
    "fastf1>=3.3.0",
    # LLM Gateway (multi-provider)
    "litellm>=1.0.0",
    "openai>=1.0.0",
    # API Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Configuration
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Utilities
    "loguru>=0.7.2",
    "httpx>=0.26.0",
]

[project.scripts]
f1-data-loader = "src.data_loader:main"
f1-api = "src.api.main:cli"
f1-dashboard = "src.dashboard.app:main"

[project.optional-dependencies]
viz = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require FastF1 data)",
    "slow: Slow running tests (data loading)",
]
